# djanki

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: generate_cards.yml
anki-cards/: 003.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  1.md  2.md  3.md  4.md  5.md
config/: swagger.py  urls.py
config/splitted_settings/: boilerplate.py  installed_apps.py  rest_framework.py
exersizes/: apps.py  models.py  urls.py  views.py
exersizes/tests/: test_hello_view.py
tests/: test_get_posts.py
