[tool.poetry]
name = "Djanki"
version = "0.1.0"
description = ""
authors = ["Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
Django = "6.0.1"
djangorestframework = "3.16.1"
djangorestframework-simplejwt = "5.5.1"
drf-spectacular = "0.29.0"
django-split-settings = "1.3.2"
django-environ = "0.12.0"
django-debug-toolbar = "6.1.0"
Pillow = "12.1.0"
psycopg = "3.3.2"

[tool.poetry.group.dev.dependencies]
django-stubs = "5.2.8"
pytest = "9.0.2"
pytest-django = "4.11.1"
time-machine = "3.2.0"
ipython = "8.20.0"
beautifulsoup4 = "4.14.3"
mixer = "7.2.2"
lxml = "6.0.2"
ruff = "0.14.10"
mypy = "1.19.1"
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
